# Algomate

./: .env.example  .gitignore  ALGORITHM_PSEUDOCODE.md  AUTHENTICATION_FIX_GUIDE.md  AUTHENTICATION_SETUP_COMPLETE.md  AUTH_MIGRATION_COMPLETE.md  AUTH_VERIFICATION_FINAL_REPORT.md  CACHE_MIGRATION_GUIDE.md  CLEAN-svpcet-curriculum-setup.sql  COLLEGE_DATA_ISOLATION_COMPLETE.md  COMPLETE_FIX_GUIDE.md  CONFIRM_DIALOG_MIGRATION_COMPLETE.md  CONFIRM_DIALOG_MIGRATION_GUIDE.md  CONNECTING_RAILWAY_VERCEL.md  CRITICAL_DEBUG.md  DATABASE-SETUP-STEPS.md  DATABASE_BACKUP_GUIDE.md  DATABASE_INTEGRATION_COMPLETE.md  DEPARTMENT_FILTERING_IMPLEMENTATION.md  DEPARTMENT_ISOLATION_COMPLETE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_INDEX.md  FINAL-LAB-CONTINUATION-FIX.md  FINAL_PERMISSIONS_FIX.md  FIX_EMPTY_DROPDOWN.md  FIX_NOW_README.md  HOW_TO_FIX_UNTAGGED_SUBJECTS.md  IMPLEMENTATION_ROADMAP.md  LOGIN_PERFORMANCE_OPTIMIZATION.md  LOW_PRIORITY_FEATURES_COMPLETE.md  MANUAL_FIX.sql  MIDDLEWARE_TASKS_COMPLETED.md  MIGRATION_FINAL_SUMMARY.md  NEP_2020_INTEGRATION_SUMMARY.md  NEP_COMPLETE_IMPLEMENTATION.md  NEP_CURRICULUM_API_FIX_COMPLETE.md  NEP_CURRICULUM_BUILDER_MIGRATION.md  NEP_CURRICULUM_COLLEGE_ADMIN.md  NEP_CURRICULUM_CREATOR_GUIDE.md  NEP_CURRICULUM_IMPLEMENTATION_SUMMARY.md  (+75 more)
services/optimized/: .flake8  .gitignore  IMPLEMENTATION_STATUS.md  INDUSTRY_READY_IMPLEMENTATION_PLAN.md  PIPELINE_ARCHITECTURE.md  QUICK_START.md  README.md  RESEARCH_ANALYSIS.md  __init__.py  _analyze_subjects.py  _check_slots.py  _deep_analysis.py  _diag.py  _diag_credits_detail.py  _diag_missing_credits.py  _diag_schema.py  _faculty_analysis.py  _preview_mismatch.py  _rhpw_check.py  all_tests.txt  check_faculty_qualifications.py  comparison_output.txt  comparison_output2.txt  config.example.json  demo_detailed_phase1.py  demo_hybrid_pipeline.py  diagnose_batch_credits.py  diagnose_credit_columns.py  diagnose_etl.py  (+28 more)
(+1070 files in other folders)
